# max-telegram-relay

./: .env_example  Cargo.toml  LICENSE  build.rs
src/: main.rs
src/max/: mod.rs
src/models/: auth.rs  handshake.rs  message.rs  mod.rs  profile.rs
