[package]
name = "max-telegram-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
futures-util = "0.3.31"
rustls = { version = "0.23.36", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = "0.17.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.20.0", features = ["v4"] }

[build-dependencies]
dotenv = "0.15.0"
